docs/1.26/core/v1/index.md
---
permalink: /1.26/core/v1/
---

# core.v1



* [affinity](affinity.md)
* [attachedVolume](attachedVolume.md)
* [awsElasticBlockStoreVolumeSource](awsElasticBlockStoreVolumeSource.md)
* [azureDiskVolumeSource](azureDiskVolumeSource.md)
* [azureFilePersistentVolumeSource](azureFilePersistentVolumeSource.md)
* [azureFileVolumeSource](azureFileVolumeSource.md)
* [binding](binding.md)
* [capabilities](capabilities.md)
* [cephFSPersistentVolumeSource](cephFSPersistentVolumeSource.md)
* [cephFSVolumeSource](cephFSVolumeSource.md)
* [cinderPersistentVolumeSource](cinderPersistentVolumeSource.md)
* [cinderVolumeSource](cinderVolumeSource.md)
* [claimSource](claimSource.md)
* [clientIPConfig](clientIPConfig.md)
* [componentCondition](componentCondition.md)
* [componentStatus](componentStatus.md)
* [configMap](configMap.md)
* [configMapEnvSource](configMapEnvSource.md)
* [configMapKeySelector](configMapKeySelector.md)
* [configMapNodeConfigSource](configMapNodeConfigSource.md)
* [configMapProjection](configMapProjection.md)
* [configMapVolumeSource](configMapVolumeSource.md)
* [container](container.md)
* [containerImage](containerImage.md)
* [containerPort](containerPort.md)
* [containerState](containerState.md)
* [containerStateRunning](containerStateRunning.md)
* [containerStateTerminated](containerStateTerminated.md)
* [containerStateWaiting](containerStateWaiting.md)
* [containerStatus](containerStatus.md)
* [csiPersistentVolumeSource](csiPersistentVolumeSource.md)
* [csiVolumeSource](csiVolumeSource.md)
* [daemonEndpoint](daemonEndpoint.md)
* [downwardAPIProjection](downwardAPIProjection.md)
* [downwardAPIVolumeFile](downwardAPIVolumeFile.md)
* [downwardAPIVolumeSource](downwardAPIVolumeSource.md)
* [emptyDirVolumeSource](emptyDirVolumeSource.md)
* [endpointAddress](endpointAddress.md)
* [endpointPort](endpointPort.md)
* [endpointSubset](endpointSubset.md)
* [endpoints](endpoints.md)
* [envFromSource](envFromSource.md)
* [envVar](envVar.md)
* [envVarSource](envVarSource.md)
* [ephemeralContainer](ephemeralContainer.md)
* [ephemeralVolumeSource](ephemeralVolumeSource.md)
* [event](event.md)
* [eventSeries](eventSeries.md)
* [eventSource](eventSource.md)
* [execAction](execAction.md)
* [fcVolumeSource](fcVolumeSource.md)
* [flexPersistentVolumeSource](flexPersistentVolumeSource.md)
* [flexVolumeSource](flexVolumeSource.md)
* [flockerVolumeSource](flockerVolumeSource.md)
* [gcePersistentDiskVolumeSource](gcePersistentDiskVolumeSource.md)
* [gitRepoVolumeSource](gitRepoVolumeSource.md)
* [glusterfsPersistentVolumeSource](glusterfsPersistentVolumeSource.md)
* [glusterfsVolumeSource](glusterfsVolumeSource.md)
* [grpcAction](grpcAction.md)
* [hostAlias](hostAlias.md)
* [hostPathVolumeSource](hostPathVolumeSource.md)
* [httpGetAction](httpGetAction.md)
* [httpHeader](httpHeader.md)
* [iscsiPersistentVolumeSource](iscsiPersistentVolumeSource.md)
* [iscsiVolumeSource](iscsiVolumeSource.md)
* [keyToPath](keyToPath.md)
* [lifecycle](lifecycle.md)
* [lifecycleHandler](lifecycleHandler.md)
* [limitRange](limitRange.md)
* [limitRangeItem](limitRangeItem.md)
* [limitRangeSpec](limitRangeSpec.md)
* [list](list.md)
* [loadBalancerIngress](loadBalancerIngress.md)
* [loadBalancerStatus](loadBalancerStatus.md)
* [localObjectReference](localObjectReference.md)
* [localVolumeSource](localVolumeSource.md)
* [namespace](namespace.md)
* [namespaceCondition](namespaceCondition.md)
* [namespaceSpec](namespaceSpec.md)
* [namespaceStatus](namespaceStatus.md)
* [nfsVolumeSource](nfsVolumeSource.md)
* [node](node.md)
* [nodeAddress](nodeAddress.md)
* [nodeAffinity](nodeAffinity.md)
* [nodeCondition](nodeCondition.md)
* [nodeConfigSource](nodeConfigSource.md)
* [nodeConfigStatus](nodeConfigStatus.md)
* [nodeDaemonEndpoints](nodeDaemonEndpoints.md)
* [nodeSelector](nodeSelector.md)
* [nodeSelectorRequirement](nodeSelectorRequirement.md)
* [nodeSelectorTerm](nodeSelectorTerm.md)
* [nodeSpec](nodeSpec.md)
* [nodeStatus](nodeStatus.md)
* [nodeSystemInfo](nodeSystemInfo.md)
* [objectFieldSelector](objectFieldSelector.md)
* [objectReference](objectReference.md)
* [persistentVolume](persistentVolume.md)
* [persistentVolumeClaim](persistentVolumeClaim.md)
* [persistentVolumeClaimCondition](persistentVolumeClaimCondition.md)
* [persistentVolumeClaimSpec](persistentVolumeClaimSpec.md)
* [persistentVolumeClaimStatus](persistentVolumeClaimStatus.md)
* [persistentVolumeClaimTemplate](persistentVolumeClaimTemplate.md)
* [persistentVolumeClaimVolumeSource](persistentVolumeClaimVolumeSource.md)
* [persistentVolumeSpec](persistentVolumeSpec.md)
* [persistentVolumeStatus](persistentVolumeStatus.md)
* [photonPersistentDiskVolumeSource](photonPersistentDiskVolumeSource.md)
* [pod](pod.md)
* [podAffinity](podAffinity.md)
* [podAffinityTerm](podAffinityTerm.md)
* [podAntiAffinity](podAntiAffinity.md)
* [podCondition](podCondition.md)
* [podDNSConfig](podDNSConfig.md)
* [podDNSConfigOption](podDNSConfigOption.md)
* [podIP](podIP.md)
* [podOS](podOS.md)
* [podReadinessGate](podReadinessGate.md)
* [podResourceClaim](podResourceClaim.md)
* [podSchedulingGate](podSchedulingGate.md)
* [podSecurityContext](podSecurityContext.md)
* [podSpec](podSpec.md)
* [podStatus](podStatus.md)
* [podTemplate](podTemplate.md)
* [podTemplateSpec](podTemplateSpec.md)
* [portStatus](portStatus.md)
* [portworxVolumeSource](portworxVolumeSource.md)
* [preferredSchedulingTerm](preferredSchedulingTerm.md)
* [probe](probe.md)
* [projectedVolumeSource](projectedVolumeSource.md)
* [quobyteVolumeSource](quobyteVolumeSource.md)
* [rbdPersistentVolumeSource](rbdPersistentVolumeSource.md)
* [rbdVolumeSource](rbdVolumeSource.md)
* [replicationController](replicationController.md)
* [replicationControllerCondition](replicationControllerCondition.md)
* [replicationControllerSpec](replicationControllerSpec.md)
* [replicationControllerStatus](replicationControllerStatus.md)
* [resourceClaim](resourceClaim.md)
* [resourceFieldSelector](resourceFieldSelector.md)
* [resourceQuota](resourceQuota.md)
* [resourceQuotaSpec](resourceQuotaSpec.md)
* [resourceQuotaStatus](resourceQuotaStatus.md)
* [resourceRequirements](resourceRequirements.md)
* [scaleIOPersistentVolumeSource](scaleIOPersistentVolumeSource.md)
* [scaleIOVolumeSource](scaleIOVolumeSource.md)
* [scopeSelector](scopeSelector.md)
* [scopedResourceSelectorRequirement](scopedResourceSelectorRequirement.md)
* [seLinuxOptions](seLinuxOptions.md)
* [seccompProfile](seccompProfile.md)
* [secret](secret.md)
* [secretEnvSource](secretEnvSource.md)
* [secretKeySelector](secretKeySelector.md)
* [secretProjection](secretProjection.md)
* [secretReference](secretReference.md)
* [secretVolumeSource](secretVolumeSource.md)
* [securityContext](securityContext.md)
* [service](service.md)
* [serviceAccount](serviceAccount.md)
* [serviceAccountTokenProjection](serviceAccountTokenProjection.md)
* [servicePort](servicePort.md)
* [serviceSpec](serviceSpec.md)
* [serviceStatus](serviceStatus.md)
* [sessionAffinityConfig](sessionAffinityConfig.md)
* [storageOSPersistentVolumeSource](storageOSPersistentVolumeSource.md)
* [storageOSVolumeSource](storageOSVolumeSource.md)
* [sysctl](sysctl.md)
* [taint](taint.md)
* [tcpSocketAction](tcpSocketAction.md)
* [toleration](toleration.md)
* [topologySelectorLabelRequirement](topologySelectorLabelRequirement.md)
* [topologySelectorTerm](topologySelectorTerm.md)
* [topologySpreadConstraint](topologySpreadConstraint.md)
* [typedLocalObjectReference](typedLocalObjectReference.md)
* [typedObjectReference](typedObjectReference.md)
* [volume](volume.md)
* [volumeDevice](volumeDevice.md)
* [volumeMount](volumeMount.md)
* [volumeNodeAffinity](volumeNodeAffinity.md)
* [volumeProjection](volumeProjection.md)
* [vsphereVirtualDiskVolumeSource](vsphereVirtualDiskVolumeSource.md)
* [weightedPodAffinityTerm](weightedPodAffinityTerm.md)
* [windowsSecurityContextOptions](windowsSecurityContextOptions.md)